test/pointer/fail/ptr_lteq04.v3
//@execute -1=false; 0=true; 1=true
component ptr_lteq04 {
	def n: Pointer;
	def main(a: int) -> bool {
		var p = n.add(5), q = p.add(a);
		return apply(p.lteq, q);
	}
	def apply(f: Pointer -> bool, q: Pointer) -> bool {
		return f(q);
	}
}
